Fix submenu item word wrap (#403)

--- a/.dev/assets/shared/css/header/sub-menu.css
+++ b/.dev/assets/shared/css/header/sub-menu.css
@@ -72,6 +72,8 @@
 
 		/* All submenu link containers (<li>) */
 		& .menu-item {
+			white-space: normal;
+
 			@media (--large) {
 				display: block;
 				margin-left: 0;
